# JDBotTester

./: .gitignore  B.py  BotConfig.py  README.md  main.py  package_install_log  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
cogs/: Bot.py  bot.py  buttons.py  listeners.py
